--- a/purge_your_vassal/localization/english/purge_your_vassal_l_english.yml
+++ b/purge_your_vassal/localization/english/purge_your_vassal_l_english.yml
@@ -25,9 +25,14 @@
  purge_your_vassal_tax_events.1.choose.2:0 "middle tax"
  purge_your_vassal_tax_events.1.choose.3:0 "low tax"
  purge_your_vassal_tax_events.1.choose.4:0 "cancel tax"
+ overlord_high_taxes_modifier:0 "high tax"
+ overlord_middle_taxes_modifier:0 "middle tax"
+ overlord_low_taxes_modifier:0 "low tax"
 
  purge_your_vassal_migration_events.1.t:0 "migration"
  purge_your_vassal_migration_events.1.d:0 "choose migration policy"
  purge_your_vassal_migration_events.1.choose.1:0 "attract pop"
  purge_your_vassal_migration_events.1.choose.2:0 "send pop"
  purge_your_vassal_migration_events.1.choose.3:0 "stop migration"
+ overlord_attract_pop_modifier:0 "lord attract pop"
+ overlord_send_pop_modifier:0 "lord send pop"
