--- a/purge_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
+++ b/purge_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
@@ -24,9 +24,14 @@
  purge_your_vassal_tax_events.1.choose.2:0 "中"
  purge_your_vassal_tax_events.1.choose.3:0 "低"
  purge_your_vassal_tax_events.1.choose.4:0 "取消附加收税"
+ overlord_high_taxes_modifier:0 "高附庸税"
+ overlord_middle_taxes_modifier:0 "中附庸税"
+ overlord_low_taxes_modifier:0 "低附庸税"
 
  purge_your_vassal_migration_events.1.t:0 "移民"
  purge_your_vassal_migration_events.1.d:0 "选择移民政策"
  purge_your_vassal_migration_events.1.choose.1:0 "吸人"
  purge_your_vassal_migration_events.1.choose.2:0 "赶人"
  purge_your_vassal_migration_events.1.choose.3:0 "取消移民政策"
+ overlord_attract_pop_modifier:0 "被宗主吸人"
+ overlord_send_pop_modifier:0 "被宗主殖民"
