--- a/manage_your_vassal/localization/english/purge_your_vassal_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_l_english.yml
@@ -13,6 +13,8 @@
  purge_your_vassal_events.1.choose.3:0 "fuck just annex it!"
  purge_your_vassal_events.1.choose.4:0 "tax"
  purge_your_vassal_events.1.choose.5:0 "migration"
+ purge_your_vassal_events.1.choose.6:0 "policy"
+ purge_your_vassal_events.1.choose.7:0 "ruler"
 
 
  purge_your_vassal_culture_events.1.t:0 "culture"
