--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
- purge_your_vassal_policy_events.1.t:0 "ruler"
- purge_your_vassal_policy_events.1.d:0 "install a puppet ruler"
- purge_your_vassal_policy_events.1.choose.1:0 "our king of course"
- purge_your_vassal_policy_events.1.choose.2:0 "a nobel man"
+ purge_your_vassal_policy_menu1.1:0 "policy modify"
+ purge_your_vassal_policy_menu1_events.1.t:0 "policy modify"
+ purge_your_vassal_policy_menu1_events.1.d:0 "modify vassal's policy"
+ purge_your_vassal_policy_menu1.1.choose.1:0 "power_structure"
+ purge_your_vassal_policy_menu1.1.choose.2:0 "economy"
+ purge_your_vassal_policy_menu1.1.choose.3:0 "human_rights"
