--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
@@ -1,30 +1,37 @@
-purge_your_vassal_policy_menu2.1:0 "policy modify"
-purge_your_vassal_policy_menu2.1.t:0 "policy modify"
-purge_your_vassal_policy_menu2.1.d:0 "modify vassal's policy"
-purge_your_vassal_policy_menu2.1.choose.1:0 "governance_principles"
-purge_your_vassal_policy_menu2.1.choose.2:0 "distribution_of_power"
-purge_your_vassal_policy_menu2.1.choose.3:0 "citizenship"
-purge_your_vassal_policy_menu2.1.choose.4:0 "church_and_state"
-purge_your_vassal_policy_menu2.1.choose.5:0 "bureaucracy"
-purge_your_vassal_policy_menu2.1.choose.6:0 "army_model"
-purge_your_vassal_policy_menu2.1.choose.7:0 "internal_security"
-purge_your_vassal_policy_menu2.2:0 "policy modify"
-purge_your_vassal_policy_menu2.2.t:0 "policy modify"
-purge_your_vassal_policy_menu2.2.d:0 "modify vassal's policy"
-purge_your_vassal_policy_menu2.2.choose.1:0 "economic_system"
-purge_your_vassal_policy_menu2.2.choose.2:0 "trade_policy"
-purge_your_vassal_policy_menu2.2.choose.3:0 "taxation"
-purge_your_vassal_policy_menu2.2.choose.4:0 "colonial_affairs"
-purge_your_vassal_policy_menu2.2.choose.5:0 "policing"
-purge_your_vassal_policy_menu2.2.choose.6:0 "education_system"
-purge_your_vassal_policy_menu2.2.choose.7:0 "health_system"
-purge_your_vassal_policy_menu2.3:0 "policy modify"
-purge_your_vassal_policy_menu2.3.t:0 "policy modify"
-purge_your_vassal_policy_menu2.3.d:0 "modify vassal's policy"
-purge_your_vassal_policy_menu2.3.choose.1:0 "free_speech"
-purge_your_vassal_policy_menu2.3.choose.2:0 "labor_rights"
-purge_your_vassal_policy_menu2.3.choose.3:0 "childrens_rights"
-purge_your_vassal_policy_menu2.3.choose.4:0 "rights_of_women"
-purge_your_vassal_policy_menu2.3.choose.5:0 "welfare"
-purge_your_vassal_policy_menu2.3.choose.6:0 "migration"
-purge_your_vassal_policy_menu2.3.choose.7:0 "slavery"
+l_simp_chinese:
+ purge_your_vassal:0 "管理你的附庸"
+ purge_your_vassal_action_name:0 "管理你的附庸"
+ purge_your_vassal_desc:0 "管理你的附庸"
+ purge_your_vassal_action_notification_name:0 "管理你的附庸"
+ purge_your_vassal_action_notification_desc:0 "管理你的附庸"
+ purge_your_vassal_modifier:0 "管理你的附庸"
+ 
+ purge_your_vassal_events.1.t:0 "如何管理你的附庸"
+ purge_your_vassal_events.1.d:0 "选择如何管理你的附庸 [SCOPE.sC('target_country').GetName] "
+ purge_your_vassal_events.1.choose.1:0 "文化"
+ purge_your_vassal_events.1.choose.2:0 "转宗教"
+ purge_your_vassal_events.1.choose.3:0 "直接吞了"
+ purge_your_vassal_events.1.choose.4:0 "税收"
+ purge_your_vassal_events.1.choose.5:0 "移民"
+
+ purge_your_vassal_culture_events.1.t:0 "文化"
+ purge_your_vassal_culture_events.1.d:0 "选择文化"
+ purge_your_vassal_culture_events.1.choose.1:0 "和爷一样就行"
+
+ purge_your_vassal_tax_events.1.t:0 "附加税收"
+ purge_your_vassal_tax_events.1.d:0 "选择附加税收政策"
+ purge_your_vassal_tax_events.1.choose.1:0 "高"
+ purge_your_vassal_tax_events.1.choose.2:0 "中"
+ purge_your_vassal_tax_events.1.choose.3:0 "低"
+ purge_your_vassal_tax_events.1.choose.4:0 "取消附加收税"
+ overlord_high_taxes_modifier:0 "高附庸税"
+ overlord_middle_taxes_modifier:0 "中附庸税"
+ overlord_low_taxes_modifier:0 "低附庸税"
+
+ purge_your_vassal_migration_events.1.t:0 "移民"
+ purge_your_vassal_migration_events.1.d:0 "选择移民政策"
+ purge_your_vassal_migration_events.1.choose.1:0 "吸人"
+ purge_your_vassal_migration_events.1.choose.2:0 "赶人"
+ purge_your_vassal_migration_events.1.choose.3:0 "取消移民政策"
+ overlord_attract_pop_modifier:0 "被宗主吸人"
+ overlord_send_pop_modifier:0 "被宗主殖民"
