--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
@@ -1,4 +1,4 @@
-l_simp_chinese:
+﻿l_simp_chinese:
  purge_your_vassal:0 "管理你的附庸"
  purge_your_vassal_action_name:0 "管理你的附庸"
  purge_your_vassal_desc:0 "管理你的附庸"
