--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_army_model_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_army_model_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- purge_your_vassal_policy_menu3_army_model.1:0 "army_model policy modify"
- purge_your_vassal_policy_menu3_army_model_events.1.t:0 "army_model policy modify"
+ purge_your_vassal_policy_menu3_army_model.1:0 "$lawgroup_army_model$ policy modify"
+ purge_your_vassal_policy_menu3_army_model_events.1.t:0 "$lawgroup_army_model$ policy modify"
  purge_your_vassal_policy_menu3_army_model_events.1.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu3_army_model_events.1.choose.1:0 "$law_peasant_levies$"
  purge_your_vassal_policy_menu3_army_model_events.1.choose.2:0 "$law_professional_army$"
