--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_childrens_rights_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_childrens_rights_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- purge_your_vassal_policy_menu3_childrens_rights.1:0 "childrens_rights policy modify"
- purge_your_vassal_policy_menu3_childrens_rights_events.1.t:0 "childrens_rights policy modify"
+ purge_your_vassal_policy_menu3_childrens_rights.1:0 "$lawgroup_childrens_rights$ policy modify"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.t:0 "$lawgroup_childrens_rights$ policy modify"
  purge_your_vassal_policy_menu3_childrens_rights_events.1.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.1:0 "$law_child_labor_allowed$"
  purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.2:0 "$law_restricted_child_labor$"
