--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_church_and_state_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_church_and_state_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- purge_your_vassal_policy_menu3_church_and_state.1:0 "church_and_state policy modify"
- purge_your_vassal_policy_menu3_church_and_state_events.1.t:0 "church_and_state policy modify"
+ purge_your_vassal_policy_menu3_church_and_state.1:0 "$lawgroup_church_and_state$ policy modify"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.t:0 "$lawgroup_church_and_state$ policy modify"
  purge_your_vassal_policy_menu3_church_and_state_events.1.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu3_church_and_state_events.1.choose.1:0 "$law_state_religion$"
  purge_your_vassal_policy_menu3_church_and_state_events.1.choose.2:0 "$law_freedom_of_conscience$"
