--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_citizenship_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_citizenship_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- purge_your_vassal_policy_menu3_citizenship.1:0 "citizenship policy modify"
- purge_your_vassal_policy_menu3_citizenship_events.1.t:0 "citizenship policy modify"
+ purge_your_vassal_policy_menu3_citizenship.1:0 "$lawgroup_citizenship$ policy modify"
+ purge_your_vassal_policy_menu3_citizenship_events.1.t:0 "$lawgroup_citizenship$ policy modify"
  purge_your_vassal_policy_menu3_citizenship_events.1.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu3_citizenship_events.1.choose.1:0 "$law_ethnostate$"
  purge_your_vassal_policy_menu3_citizenship_events.1.choose.2:0 "$law_national_supremacy$"
