--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_education_system_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_education_system_l_simp_chinese.yml
@@ -1,6 +1,7 @@
 ﻿l_simp_chinese:
-NaN purge_your_vassal_policy_menu3_education_system_events.1.t:0 "education_system policy modify"
- purge_your_vassal_policy_menu3_education_system_events.1.d:0 "modify vassal's policy"
+ purge_your_vassal_policy_menu3_education_system.1:0 "$lawgroup_education_system$ 政策修改"
+ purge_your_vassal_policy_menu3_education_system_events.1.t:0 "$lawgroup_education_system$ 政策修改"
+ purge_your_vassal_policy_menu3_education_system_events.1.d:0 "附庸政策修改"
  purge_your_vassal_policy_menu3_education_system_events.1.choose.1:0 "$law_no_schools$"
  purge_your_vassal_policy_menu3_education_system_events.1.choose.2:0 "$law_religious_schools$"
  purge_your_vassal_policy_menu3_education_system_events.1.choose.3:0 "$law_private_schools$"
