--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_labor_rights_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_labor_rights_l_simp_chinese.yml
@@ -1,6 +1,7 @@
 ﻿l_simp_chinese:
-NaN purge_your_vassal_policy_menu3_labor_rights_events.1.t:0 "labor_rights policy modify"
- purge_your_vassal_policy_menu3_labor_rights_events.1.d:0 "modify vassal's policy"
+ purge_your_vassal_policy_menu3_labor_rights.1:0 "$lawgroup_labor_rights$ 政策修改"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.t:0 "$lawgroup_labor_rights$ 政策修改"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.d:0 "附庸政策修改"
  purge_your_vassal_policy_menu3_labor_rights_events.1.choose.1:0 "$law_serfdom_banned$"
  purge_your_vassal_policy_menu3_labor_rights_events.1.choose.2:0 "$law_serfdom$"
  purge_your_vassal_policy_menu3_labor_rights_events.1.choose.3:0 "$law_regulatory_bodies$"
