--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_policing_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_policing_l_simp_chinese.yml
@@ -1,6 +1,7 @@
 ﻿l_simp_chinese:
-NaN purge_your_vassal_policy_menu3_policing_events.1.t:0 "policing policy modify"
- purge_your_vassal_policy_menu3_policing_events.1.d:0 "modify vassal's policy"
+ purge_your_vassal_policy_menu3_policing.1:0 "$lawgroup_policing$ 政策修改"
+ purge_your_vassal_policy_menu3_policing_events.1.t:0 "$lawgroup_policing$ 政策修改"
+ purge_your_vassal_policy_menu3_policing_events.1.d:0 "附庸政策修改"
  purge_your_vassal_policy_menu3_policing_events.1.choose.1:0 "$law_no_police$"
  purge_your_vassal_policy_menu3_policing_events.1.choose.2:0 "$law_local_police$"
  purge_your_vassal_policy_menu3_policing_events.1.choose.3:0 "$law_dedicated_police$"
