--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_rights_of_women_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_rights_of_women_l_simp_chinese.yml
@@ -1,6 +1,7 @@
 ﻿l_simp_chinese:
-NaN purge_your_vassal_policy_menu3_rights_of_women_events.1.t:0 "rights_of_women policy modify"
- purge_your_vassal_policy_menu3_rights_of_women_events.1.d:0 "modify vassal's policy"
+ purge_your_vassal_policy_menu3_rights_of_women.1:0 "$lawgroup_rights_of_women$ 政策修改"
+ purge_your_vassal_policy_menu3_rights_of_women_events.1.t:0 "$lawgroup_rights_of_women$ 政策修改"
+ purge_your_vassal_policy_menu3_rights_of_women_events.1.d:0 "附庸政策修改"
  purge_your_vassal_policy_menu3_rights_of_women_events.1.choose.1:0 "$law_no_womens_rights$"
  purge_your_vassal_policy_menu3_rights_of_women_events.1.choose.2:0 "$law_women_own_property$"
  purge_your_vassal_policy_menu3_rights_of_women_events.1.choose.3:0 "$law_women_in_the_workplace$"
