--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu2_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu2_l_english.yml
@@ -8,7 +8,8 @@
  purge_your_vassal_policy_menu2_events.1.choose.4:0 "$lawgroup_church_and_state$"
  purge_your_vassal_policy_menu2_events.1.choose.5:0 "$lawgroup_bureaucracy$"
  purge_your_vassal_policy_menu2_events.1.choose.6:0 "$lawgroup_army_model$"
- purge_your_vassal_policy_menu2_events.1.choose.7:0 "$lawgroup_internal_security$" purge_your_vassal_policy_menu2.2:0 "policy modify"
+ purge_your_vassal_policy_menu2_events.1.choose.7:0 "$lawgroup_internal_security$"
+ purge_your_vassal_policy_menu2.2:0 "policy modify"
  purge_your_vassal_policy_menu2_events.2.t:0 "policy modify"
  purge_your_vassal_policy_menu2_events.2.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu2_events.2.choose.1:0 "$lawgroup_economic_system$"
@@ -17,7 +18,8 @@
  purge_your_vassal_policy_menu2_events.2.choose.4:0 "$lawgroup_colonial_affairs$"
  purge_your_vassal_policy_menu2_events.2.choose.5:0 "$lawgroup_policing$"
  purge_your_vassal_policy_menu2_events.2.choose.6:0 "$lawgroup_education_system$"
- purge_your_vassal_policy_menu2_events.2.choose.7:0 "$lawgroup_health_system$" purge_your_vassal_policy_menu2.3:0 "policy modify"
+ purge_your_vassal_policy_menu2_events.2.choose.7:0 "$lawgroup_health_system$"
+ purge_your_vassal_policy_menu2.3:0 "policy modify"
  purge_your_vassal_policy_menu2_events.3.t:0 "policy modify"
  purge_your_vassal_policy_menu2_events.3.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu2_events.3.choose.1:0 "$lawgroup_free_speech$"
