--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu2_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu2_l_simp_chinese.yml
@@ -15,7 +15,7 @@
  purge_your_vassal_policy_menu2_events.2.choose.1:0 "$lawgroup_economic_system$"
  purge_your_vassal_policy_menu2_events.2.choose.2:0 "$lawgroup_trade_policy$"
  purge_your_vassal_policy_menu2_events.2.choose.3:0 "$lawgroup_taxation$"
- purge_your_vassal_policy_menu2_events.2.choose.4:0 "$lawgroup_colonial_affairs$"
+ purge_your_vassal_policy_menu2_events.2.choose.4:0 "$lawgroup_colonization$"
  purge_your_vassal_policy_menu2_events.2.choose.5:0 "$lawgroup_policing$"
  purge_your_vassal_policy_menu2_events.2.choose.6:0 "$lawgroup_education_system$"
  purge_your_vassal_policy_menu2_events.2.choose.7:0 "$lawgroup_health_system$"
