--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_l_simp_chinese.yml
@@ -18,6 +18,9 @@
  purge_your_vassal_events.1.choose.5:0 "移民"
  purge_your_vassal_events.1.choose.6:0 "政策"
  purge_your_vassal_events.1.choose.7:0 "统治者"
+ purge_your_vassal_events.1.choose.8:0 "下一页"
+
+ purge_your_vassal_events.2.choose.1:0 "投资"
 
  purge_your_vassal_culture_events.1.t:0 "文化"
  purge_your_vassal_culture_events.1.d:0 "选择文化"
