--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu2_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu2_l_english.yml
@@ -14,11 +14,12 @@
  purge_your_vassal_policy_menu2_events.2.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu2_events.2.choose.1:0 "$lawgroup_economic_system$"
  purge_your_vassal_policy_menu2_events.2.choose.2:0 "$lawgroup_trade_policy$"
- purge_your_vassal_policy_menu2_events.2.choose.3:0 "$lawgroup_taxation$"
- purge_your_vassal_policy_menu2_events.2.choose.4:0 "$lawgroup_colonization$"
- purge_your_vassal_policy_menu2_events.2.choose.5:0 "$lawgroup_policing$"
- purge_your_vassal_policy_menu2_events.2.choose.6:0 "$lawgroup_education_system$"
- purge_your_vassal_policy_menu2_events.2.choose.7:0 "$lawgroup_health_system$"
+ purge_your_vassal_policy_menu2_events.2.choose.3:0 "$lawgroup_land_reform$"
+ purge_your_vassal_policy_menu2_events.2.choose.4:0 "$lawgroup_taxation$"
+ purge_your_vassal_policy_menu2_events.2.choose.5:0 "$lawgroup_colonization$"
+ purge_your_vassal_policy_menu2_events.2.choose.6:0 "$lawgroup_policing$"
+ purge_your_vassal_policy_menu2_events.2.choose.7:0 "$lawgroup_education_system$"
+ purge_your_vassal_policy_menu2_events.2.choose.8:0 "$lawgroup_health_system$"
  purge_your_vassal_policy_menu2.3:0 "policy modify"
  purge_your_vassal_policy_menu2_events.3.t:0 "policy modify"
  purge_your_vassal_policy_menu2_events.3.d:0 "modify vassal's policy"
