--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_childrens_rights_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_childrens_rights_l_english.yml
@@ -2,6 +2,77 @@
  purge_your_vassal_policy_menu3_childrens_rights.1:0 "$lawgroup_childrens_rights$ policy modify"
  purge_your_vassal_policy_menu3_childrens_rights_events.1.t:0 "$lawgroup_childrens_rights$ policy modify"
  purge_your_vassal_policy_menu3_childrens_rights_events.1.d:0 "modify vassal's policy"
- purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.1:0 "$law_child_labor_allowed$"
- purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.2:0 "$law_restricted_child_labor$"
- purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.3:0 "$law_compulsory_primary_school$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.1:0 "$icon$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.2:0 "$icon$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.3:0 "$shown$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.4:0 "$in-game$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.5:0 "$modifier$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.6:0 "$=$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.7:0 "${$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.8:0 "$modifier$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.9:0 "$on$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.10:0 "$country$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.11:0 "$for$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.12:0 "$having$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.13:0 "$adopted$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.14:0 "$this$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.15:0 "$law$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.16:0 "$law_child_labor_allowed$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.17:0 "$icon$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.18:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.19:0 "$modifier$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.20:0 "$state_machinists_mortality_mult$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.21:0 "$state_farmers_mortality_mult$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.22:0 "$state_peasants_mortality_mult$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.23:0 "$state_dependent_wage_mult$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.24:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.25:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.26:0 "$if$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.27:0 "$value$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.28:0 "$ai_will_do$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.29:0 "$ruler$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.30:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.31:0 "$=$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.32:0 "${$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.33:0 "$value$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.34:0 "$=$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.35:0 "${$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.36:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.37:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.38:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.39:0 "$add$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.40:0 "$law_restricted_child_labor$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.41:0 "$icon$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.42:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.43:0 "$modifier$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.44:0 "$state_farmers_mortality_mult$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.45:0 "$state_peasants_mortality_mult$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.46:0 "$state_dependent_wage_mult$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.47:0 "$country_institution_schools_max_investment_add$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.48:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.49:0 "$if$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.50:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.51:0 "$=$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.52:0 "${$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.53:0 "$value$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.54:0 "$=$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.55:0 "${$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.56:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.57:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.58:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.59:0 "$add$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.60:0 "$law_compulsory_primary_school$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.61:0 "$icon$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.62:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.63:0 "$disallowing_laws$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.64:0 "$unlocking_technologies$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.65:0 "$modifier$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.66:0 "$=$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.67:0 "${$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.68:0 "$value$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.69:0 "$=$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.70:0 "${$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.71:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.72:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.73:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_childrens_rights_events.1.choose.74:0 "$add$"
