--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_church_and_state_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_church_and_state_l_simp_chinese.yml
@@ -2,7 +2,180 @@
  purge_your_vassal_policy_menu3_church_and_state.1:0 "$lawgroup_church_and_state$ 政策修改"
  purge_your_vassal_policy_menu3_church_and_state_events.1.t:0 "$lawgroup_church_and_state$ 政策修改"
  purge_your_vassal_policy_menu3_church_and_state_events.1.d:0 "附庸政策修改"
- purge_your_vassal_policy_menu3_church_and_state_events.1.choose.1:0 "$law_state_religion$"
- purge_your_vassal_policy_menu3_church_and_state_events.1.choose.2:0 "$law_freedom_of_conscience$"
- purge_your_vassal_policy_menu3_church_and_state_events.1.choose.3:0 "$law_total_separation$"
- purge_your_vassal_policy_menu3_church_and_state_events.1.choose.4:0 "$law_state_atheism$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.1:0 "$icon$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.2:0 "$icon$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.3:0 "$shown$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.4:0 "$in-game$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.5:0 "$modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.6:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.7:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.8:0 "$modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.9:0 "$on$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.10:0 "$country$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.11:0 "$for$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.12:0 "$having$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.13:0 "$adopted$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.14:0 "$this$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.15:0 "$law$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.16:0 "$cultural_acceptance_rule$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.17:0 "$and$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.18:0 "$religious_acceptance_rule$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.19:0 "$are$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.20:0 "$triggers$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.21:0 "$in$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.22:0 "$the$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.23:0 "$pop$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.24:0 "$scope$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.25:0 "$used$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.26:0 "$to$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.27:0 "$check$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.28:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.29:0 "$a$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.30:0 "$pop$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.31:0 "$should$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.32:0 "$be$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.33:0 "$accepted$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.34:0 "$or$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.35:0 "$discriminated$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.36:0 "$against$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.37:0 "$law_state_religion$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.38:0 "$icon$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.39:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.40:0 "$on_enact$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.41:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.42:0 "$set_state_religion$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.43:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.44:0 "$remove_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.45:0 "$religious_acceptance_rule$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.46:0 "$modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.47:0 "$state_radicals_from_sol_change_accepted_religion_mult$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.48:0 "$state_loyalists_from_sol_change_accepted_religion_mult$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.49:0 "$country_authority_add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.50:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.51:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.52:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.53:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.54:0 "$ai_will_do$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.55:0 "$ruler$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.56:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.57:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.58:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.59:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.60:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.61:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.62:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.63:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.64:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.65:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.66:0 "$law_freedom_of_conscience$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.67:0 "$icon$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.68:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.69:0 "$disallowing_laws$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.70:0 "$on_enact$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.71:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.72:0 "$set_state_religion$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.73:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.74:0 "$remove_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.75:0 "$religious_acceptance_rule$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.76:0 "$modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.77:0 "$state_radicals_from_sol_change_accepted_religion_mult$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.78:0 "$state_loyalists_from_sol_change_accepted_religion_mult$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.79:0 "$country_authority_add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.80:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.81:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.82:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.83:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.84:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.85:0 "$has_law$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.86:0 "$is_pop_type$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.87:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.88:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.89:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.90:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.91:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.92:0 "$religion_accepted$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.93:0 "$owner$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.94:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.95:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.96:0 "$NOT$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.97:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.98:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.99:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.100:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.101:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.102:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.103:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.104:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.105:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.106:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.107:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.108:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.109:0 "$law_total_separation$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.110:0 "$icon$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.111:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.112:0 "$unlocking_technologies$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.113:0 "$disallowing_laws$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.114:0 "$on_enact$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.115:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.116:0 "$set_state_religion$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.117:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.118:0 "$remove_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.119:0 "$religious_acceptance_rule$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.120:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.121:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.122:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.123:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.124:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.125:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.126:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.127:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.128:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.129:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.130:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.131:0 "$religion_accepted$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.132:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.133:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.134:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.135:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.136:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.137:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.138:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.139:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.140:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.141:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.142:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.143:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.144:0 "$law_state_atheism$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.145:0 "$icon$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.146:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.147:0 "$disallowing_laws$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.148:0 "$modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.149:0 "$state_conversion_mult$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.150:0 "$country_authority_add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.151:0 "$can_enact$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.152:0 "$on_enact$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.153:0 "$set_state_religion$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.154:0 "$add_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.155:0 "$months$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.156:0 "$custom_tooltip$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.157:0 "$every_scope_state$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.158:0 "$convert_population$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.159:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.160:0 "$religious_acceptance_rule$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.161:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.162:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.163:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.164:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.165:0 "$add$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.166:0 "$if$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.167:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.168:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.169:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.170:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.171:0 "$value$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.172:0 "$=$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.173:0 "${$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.174:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.175:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.176:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_church_and_state_events.1.choose.177:0 "$add$"
