--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_bureaucracy_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_bureaucracy_l_simp_chinese.yml
@@ -3,5 +3,83 @@
  purge_your_vassal_policy_menu3_bureaucracy_events.1.t:0 "$lawgroup_bureaucracy$ 政策修改"
  purge_your_vassal_policy_menu3_bureaucracy_events.1.d:0 "附庸政策修改"
  purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.1:0 "$law_hereditary_bureaucrats$"
- purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.2:0 "$law_appointed_bureaucrats$"
- purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.3:0 "$law_elected_bureaucrats$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.2:0 "$icon$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.3:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.4:0 "$modifier$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.5:0 "$interest_group_ig_landowners_pol_str_mult$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.6:0 "$disallowing_laws$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.7:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.8:0 "$law_elected_bureaucrat$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.9:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.10:0 "$if$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.11:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.12:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.13:0 "$is_pop_type$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.14:0 "$value$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.15:0 "$ai_will_do$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.16:0 "$ruler$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.17:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.18:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.19:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.20:0 "$value$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.21:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.22:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.23:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.24:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.25:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.26:0 "$add$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.27:0 "$law_appointed_bureaucrats$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.28:0 "$icon$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.29:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.30:0 "$state_tax_capacity_mult$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.31:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.32:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.33:0 "$if$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.34:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.35:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.36:0 "$is_pop_type$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.37:0 "$value$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.38:0 "$add$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.39:0 "$if$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.40:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.41:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.42:0 "$has_law$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.43:0 "$is_pop_type$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.44:0 "$value$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.45:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.46:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.47:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.48:0 "$value$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.49:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.50:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.51:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.52:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.53:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.54:0 "$add$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.55:0 "$law_elected_bureaucrats$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.56:0 "$icon$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.57:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.58:0 "$disallowing_laws$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.59:0 "$law_oligarch$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.60:0 "$law_technocrac$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.61:0 "$law_elder_counci$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.62:0 "$modifier$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.63:0 "$interest_group_ig_petty_bourgeoisie_pol_str_mult$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.64:0 "$possible_political_movements$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.65:0 "$pop_support$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.66:0 "$if$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.67:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.68:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.69:0 "$has_law$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.70:0 "$is_pop_type$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.71:0 "$value$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.72:0 "$ai_enact_weight_modifier$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.73:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.74:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.75:0 "$value$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.76:0 "$=$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.77:0 "${$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.78:0 "$has_journal_entry$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.79:0 "$has_variable$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.80:0 "$scope:law$"
+ purge_your_vassal_policy_menu3_bureaucracy_events.1.choose.81:0 "$add$"
