--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_distribution_of_power_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_distribution_of_power_l_english.yml
@@ -3,10 +3,12 @@
  purge_your_vassal_policy_menu3_distribution_of_power_events.1.t:0 "$lawgroup_distribution_of_power$ policy modify"
  purge_your_vassal_policy_menu3_distribution_of_power_events.1.d:0 "modify vassal's policy"
  purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.1:0 "$law_autocracy$"
- purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.2:0 "$law_oligarchy$"
- purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.3:0 "$law_elder_council$"
- purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.4:0 "$law_landed_voting$"
- purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.5:0 "$law_wealth_voting$"
- purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.6:0 "$law_census_voting$"
- purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.7:0 "$law_universal_suffrage$"
- purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.8:0 "$law_anarchy$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.2:0 "$law_technocracy$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.3:0 "$law_oligarchy$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.4:0 "$law_elder_council$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.5:0 "$law_landed_voting$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.6:0 "$law_wealth_voting$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.7:0 "$law_census_voting$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.8:0 "$law_universal_suffrage$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.9:0 "$law_anarchy$"
+ purge_your_vassal_policy_menu3_distribution_of_power_events.1.choose.10:0 "$law_single_party_state$"
