--- a/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_labor_rights_l_simp_chinese.yml
+++ b/manage_your_vassal/localization/simp_chinese/purge_your_vassal_policy_menu3_labor_rights_l_simp_chinese.yml
@@ -3,5 +3,11 @@
  purge_your_vassal_policy_menu3_labor_rights_events.1.t:0 "$lawgroup_labor_rights$ 政策修改"
  purge_your_vassal_policy_menu3_labor_rights_events.1.d:0 "附庸政策修改"
  purge_your_vassal_policy_menu3_labor_rights_events.1.choose.1:0 "$law_no_workers_rights$"
- purge_your_vassal_policy_menu3_labor_rights_events.1.choose.2:0 "$law_regulatory_bodies$"
- purge_your_vassal_policy_menu3_labor_rights_events.1.choose.3:0 "$law_worker_protections$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.2:0 "$=$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.3:0 "${$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.4:0 "$group$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.5:0 "$icon$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.6:0 "$progressiveness$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.7:0 "$modifier$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.8:0 "$law_regulatory_bodies$"
+ purge_your_vassal_policy_menu3_labor_rights_events.1.choose.9:0 "$law_worker_protections$"
