--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_economic_system_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_economic_system_l_english.yml
@@ -6,6 +6,7 @@
  purge_your_vassal_policy_menu3_economic_system_events.1.choose.2:0 "$law_interventionism$"
  purge_your_vassal_policy_menu3_economic_system_events.1.choose.3:0 "$law_agrarianism$"
  purge_your_vassal_policy_menu3_economic_system_events.1.choose.4:0 "$law_industry_banned$"
- purge_your_vassal_policy_menu3_economic_system_events.1.choose.5:0 "$law_laissez_faire$"
- purge_your_vassal_policy_menu3_economic_system_events.1.choose.6:0 "$law_cooperative_ownership$"
- purge_your_vassal_policy_menu3_economic_system_events.1.choose.7:0 "$law_command_economy$"
+ purge_your_vassal_policy_menu3_economic_system_events.1.choose.5:0 "$law_extraction_economy$"
+ purge_your_vassal_policy_menu3_economic_system_events.1.choose.6:0 "$law_laissez_faire$"
+ purge_your_vassal_policy_menu3_economic_system_events.1.choose.7:0 "$law_cooperative_ownership$"
+ purge_your_vassal_policy_menu3_economic_system_events.1.choose.8:0 "$law_command_economy$"
