--- a/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_governance_principles_l_english.yml
+++ b/manage_your_vassal/localization/english/purge_your_vassal_policy_menu3_governance_principles_l_english.yml
@@ -8,3 +8,4 @@
  purge_your_vassal_policy_menu3_governance_principles_events.1.choose.4:0 "$law_parliamentary_republic$"
  purge_your_vassal_policy_menu3_governance_principles_events.1.choose.5:0 "$law_theocracy$"
  purge_your_vassal_policy_menu3_governance_principles_events.1.choose.6:0 "$law_council_republic$"
+ purge_your_vassal_policy_menu3_governance_principles_events.1.choose.7:0 "$law_corporate_state$"
